article for react native

--- a/reactNative/rn/004_01.md
+++ b/reactNative/rn/004_01.md
@@ -1,119 +1,113 @@
+# React Native Interview Questions: Closure, `this`, Arrow Functions, and Hoisting
 
+These core JavaScript concepts—**closures**, **`this` binding**, **arrow functions**, and **hoisting**—are essential in day-to-day React Native development. Below is a set of technical interview questions and answers tailored for React Native developers using **TypeScript**. Each concept is paired with relevant code examples.
 
-✅ JavaScript & ESNext -- Fundamentals
-------------------------------------
+---
 
-### 🔹 Closures
+## 🔒 Closure Questions
 
-### 1\. **What is a closure in JavaScript? Give a real-world example.**
+### 1. What is a closure in JavaScript?
 
-**Answer:** A closure is when an inner function retains access to variables from its outer function even after the outer function has returned.
+**Answer**: A closure is a function that has access to its outer function’s variables even after the outer function has finished executing.
 
-Example:\
-```\
-function createCounter() {\
-let count = 0;\
-return function() {\
-count++;\
-return count;\
-};\
+### 2. Can you give a React Native example of how a closure can retain state?
+
+```
+const useLogger = () : (() => void) => {
+  let count = 0;
+
+  return () => {
+    count += 1;
+    console.log('Clicked', count, 'times');
+  };
+};
+
+const logger = useLogger();
+logger(); // Clicked 1 times
+logger(); // Clicked 2 times
+```
+
+---
+
+## 🤔 `this` Context Questions
+
+### 3. What does `this` refer to in a class component method?
+
+**Answer**: In a React class component, `this` typically refers to the instance of the component, unless the method is unbound.
+
+### 4. How do you fix `this` undefined in a class method?
+
+**Answer**: You can either bind it in the constructor or use an arrow function.
+
+### 5. Example: What will this output?
+
+```
+class Example extends React.Component {
+  message: string = 'Hello';
+
+  showMessage() {
+    console.log(this.message);
+  }
+
+  render() {
+    const { showMessage } = this;
+    showMessage(); // What will this log?
+    return null;
+  }
 }
+```
 
-const counter = createCounter();\
-counter(); // 1\
-counter(); // 2\
-```\
-The `counter` function retains access to `count` even though `createCounter` has finished execution.
+**Answer**: It will throw an error (`this` is undefined) unless `showMessage` is bound to the instance.
 
-* * * * *
+---
 
-### 2\. **How do closures help in maintaining state in functional components or hooks in React Native?**
+## 🏹 Arrow Function Questions
 
-**Answer:** React hooks like `useState` and `useEffect` rely on closures. The component's internal functions "close over" the current state, preserving it across renders and function calls.
+### 6. What is the difference between a normal function and an arrow function in terms of `this`?
 
-* * * * *
+**Answer**: Arrow functions do **not** have their own `this`. They capture the `this` from the surrounding scope.
 
-### 3\. **What are some memory-related drawbacks of closures, and how do you avoid them?**
+### 7. How does arrow function help in React Native event handlers?
 
-**Answer:** Closures can cause memory leaks if they retain references to large objects or DOM elements. Use proper cleanup in `useEffect` and avoid creating unnecessary closures inside render methods.
+```
+<Button title="Click" onPress={() => this.handleClick()} />
+```
 
-* * * * *
+**Answer**: Using an arrow function avoids the need to bind `this` in the constructor and keeps the correct context.
 
-### 🔹 Hoisting
+---
 
-### 4\. **What is hoisting in JavaScript? Which declarations are hoisted and how does it affect execution order?**
+## 🪄 Hoisting Questions
 
-**Answer:** Hoisting is the JavaScript behavior where variable and function declarations are moved to the top of their scope. Only **declarations** are hoisted, not **initializations**.
+### 8. What is hoisting in JavaScript?
 
-Example:\
-```\
-console.log(a); // undefined\
-var a = 5;\
-```\
-`var a` is hoisted, but not `a = 5`.
+**Answer**: Hoisting is JavaScript’s default behavior of moving declarations (not initializations) to the top of their scope.
 
-* * * * *
+### 9. Will this work?
 
-### 5\. **How do `let`, `const`, and `var` differ in terms of hoisting behavior?**
+```
+console.log(value); // undefined or error?
+var value = 5;
+```
 
-**Answer:**
+**Answer**: It logs `undefined`. The declaration is hoisted, but the assignment is not.
 
--   `var` is hoisted and initialized with `undefined`.
+### 10. How about with `let` or `const`?
 
--   `let` and `const` are hoisted but stay in the **Temporal Dead Zone** (TDZ) until declared, so accessing them before declaration throws an error.
+```
+console.log(name); // What happens?
+let name = 'React Native';
+```
 
-* * * * *
+**Answer**: It throws a `ReferenceError` due to the temporal dead zone.
 
-### 🔹 `this`
+---
 
-### 6\. **Explain how the value of `this` changes depending on context in JavaScript.**
+## ✅ Final Takeaways
 
-**Answer:** `this` refers to the **calling context**:
+- Use closures for encapsulated logic like counters or memoization in hooks.
+- Always ensure correct `this` binding in class components or use arrow functions.
+- Arrow functions help with concise syntax and preserve context.
+- Know what variables are hoisted (e.g., `var`) and which are not (`let`, `const`, `function` in blocks).
 
--   In global scope: `this` is `window` (in browsers).
-
--   In object methods: `this` refers to the object.
-
--   In class methods: `this` refers to the class instance.
-
--   In functions: `this` is `undefined` in strict mode or `window` otherwise.
-
-* * * * *
-
-### 7\. **How does `this` behave differently in arrow functions compared to traditional functions?**
-
-**Answer:** Arrow functions **don't have their own `this`**. They inherit `this` from the enclosing context, which is helpful to avoid binding when accessing `this` in methods or callbacks.
-
-* * * * *
-
-### 8\. **In a class-based component, how do you bind event handlers to preserve `this` context?**
-
-**Answer:** You either:
-
-1.  Bind in the constructor:\
-    `this.handleClick = this.handleClick.bind(this);`
-
-2.  Use arrow functions:\
-    `handleClick = () => { ... };` (auto binds `this`)
-
-* * * * *
-
-### 🔹 Arrow Functions
-
-### 9\. **What are arrow functions, and how do they differ from normal functions in terms of syntax and behavior?**
-
-**Answer:**
-
--   Shorter syntax: `const sum = (a, b) => a + b;`
-
--   No `this`, `arguments`, `super`, or `new.target` bindings.
-
--   Cannot be used as constructors.
-
-* * * * *
-
-### 10\. **Why don't arrow functions have their own `this` binding? How is that useful in React or React Native development?**
-
-**Answer:** Arrow functions inherit `this` from their enclosing scope, which helps avoid context errors in callbacks or event handlers. In React, they are commonly used to avoid binding `this` manually in class components or closures.
-
-* * * * *
+These questions help evaluate a developer’s deep understanding of JavaScript fundamentals within a React Native context.
