article for react native

--- a/reactNative/rn/005.md
+++ b/reactNative/rn/005.md
@@ -1,82 +1,176 @@
-## 1.2 JavaScript, ESNext & TypeScript Fundamentals in React Native : Async Patterns
+# Async Patterns
 
-# Async Patterns in React Native TypeScript
+Asynchronous programming is essential in modern mobile development, especially when dealing with network requests, animations, file I/O, or other time-dependent tasks. React Native supports all modern **JavaScript async patterns**, including **Promises**, **async/await**, and **advanced ESNext utilities**. TypeScript enhances these patterns with strict typing and clarity.
 
-Modern React Native apps rely on asynchronous operations for network requests, file I O, timers and more. Understanding Promises and async–await helps write clear non blocking code and handle errors gracefully.
+In this article, we’ll explore essential **async patterns in React Native**, with working examples in **TypeScript**.
 
-**What Are Promises**  
-A Promise represents a value that may be available now later or never. Promises have then and catch methods to handle success and failure.
+---
 
-**Async–Await Syntax**  
-Async–await builds on Promises to write asynchronous code in a synchronous style. An async function returns a Promise and the await keyword pauses execution until the Promise resolves or rejects.
+## 🔁 1. Promises
 
-**Error Propagation**  
-Errors in async code bubble up like synchronous code. Use try–catch inside async functions or attach catch handlers to Promises to handle failures.
+**Promises** are the foundation of modern async programming in JavaScript.
 
-**Example 1 Fetching Data**  
-Fetch a list of items from an API and handle errors
+### Example: Fetching data with a Promise
 
-&&&javascript  
-import React useEffect useState from react-native  
+&&&
+const fetchUser = () : Promise<string> => {
+  return new Promise((resolve) => {
+    setTimeout(() => {
+      resolve('John Doe');
+    }, 1000);
+  });
+};
 
-function ItemList() {  
-  const [items setItems] = useState([])  
-  const [error setError] = useState()  
-
-  async function loadItems() {  
-    try {  
-      const response = await fetch(http colon slash slash example dot com slash items)  
-      if (!response.ok) throw new Error(response statusText)  
-      const data = await response json()  
-      setItems(data)  
-    } catch (err) {  
-      setError(err message)  
-    }  
-  }  
-
-  useEffect(() => {  
-    loadItems()  
-  }, [])  
-
-  if (error) {  
-    return (<Text>Error colon {error}</Text>)  
-  }  
-
-  return items map(item => (<Text key={item id}>{item name}</Text>))  
-}  
+fetchUser().then((name) => {
+  console.log('User:', name);
+});
 &&&
 
-**Example 2 Parallel Requests**  
-Run multiple requests in parallel and wait for all  
+---
 
-&&&javascript  
-async function fetchAll() {  
-  try {  
-    const [a b] = await Promise all([  
-      fetch(api slash a) then(res => res json()),  
-      fetch(api slash b) then(res => res json())  
-    ])  
-    console log(a b)  
-  } catch (err) {  
-    console warn(Error fetching parallel)  
-  }  
-}  
+## ⏳ 2. Async/Await
+
+`async/await` syntax makes Promise-based code easier to read and maintain.
+
+### Example: Async function in React Native
+
+&&&
+const getUserProfile = async () : Promise<void> => {
+  try {
+    const response = await fetch('https://jsonplaceholder.typicode.com/users/1');
+    const user = await response.json();
+    console.log('User:', user.name);
+  } catch (error) {
+    console.error('Failed to fetch user:', error);
+  }
+};
 &&&
 
-**Benefits**  
-- Readable flow matching synchronous code  
-- Centralized error handling with try–catch  
-- Easy composition with Promise methods  
+Use inside `useEffect`:
 
-**Negatives**  
-- Forgetting await leads to unresolved Promises  
-- Uncaught rejections if errors not handled  
-- Blocking UI thread if heavy computation inside async  
+&&&
+useEffect(() => {
+  getUserProfile();
+}, []);
+&&&
 
-**When to Use**  
-- Network calls using fetch or axios  
-- Reading local files or databases  
-- Timers and animations  
-- Any I O in React Native  
+---
 
-Mastering async patterns ensures responsive performant React Native apps with robust error handling and clean code structure  
+## ⛓️ 3. Promise.all and Promise.race
+
+Use **`Promise.all`** to run multiple async tasks in parallel.
+
+### Example: Parallel data fetching
+
+&&&
+const fetchPosts = () => fetch('https://jsonplaceholder.typicode.com/posts').then(res => res.json());
+const fetchComments = () => fetch('https://jsonplaceholder.typicode.com/comments').then(res => res.json());
+
+const loadData = async () : Promise<void> => {
+  try {
+    const [posts, comments] = await Promise.all([fetchPosts(), fetchComments()]);
+    console.log('Posts:', posts.length, 'Comments:', comments.length);
+  } catch (e) {
+    console.error('Failed to load data:', e);
+  }
+};
+&&&
+
+---
+
+## ✅ 4. Typing Async Functions with TypeScript
+
+Always specify the return type of your async functions to improve type safety and developer experience.
+
+### Example: Typing API response
+
+&&&
+type User = {
+  id: number;
+  name: string;
+};
+
+const getUser = async (): Promise<User> => {
+  const response = await fetch('https://jsonplaceholder.typicode.com/users/1');
+  const user: User = await response.json();
+  return user;
+};
+&&&
+
+---
+
+## 🧰 5. Async Utilities from ESNext
+
+Newer utilities like `Promise.allSettled()` and `for await...of` can help with more complex flows.
+
+### Example: Handling mixed results
+
+&&&
+const urls = [
+  'https://jsonplaceholder.typicode.com/users/1',
+  'https://invalid.url',
+];
+
+const fetchAll = async () : Promise<void> => {
+  const results = await Promise.allSettled(urls.map(url => fetch(url)));
+
+  results.forEach((result, index) => {
+    if (result.status === 'fulfilled') {
+      console.log(`Request ${index + 1} succeeded`);
+    } else {
+      console.error(`Request ${index + 1} failed`, result.reason);
+    }
+  });
+};
+&&&
+
+---
+
+## 🧵 6. Async Patterns in React Native Use Cases
+
+- **Fetching API data** with `fetch`, `axios`, or GraphQL clients
+- **Reading from storage** (e.g. AsyncStorage, MMKV)
+- **Triggering animations** after timeouts
+- **Waiting for permissions** (e.g., camera, location)
+
+### Example: AsyncStorage with async/await
+
+&&&
+import AsyncStorage from '@react-native-async-storage/async-storage';
+
+const saveToken = async (token: string) : Promise<void> => {
+  try {
+    await AsyncStorage.setItem('authToken', token);
+  } catch (e) {
+    console.error('Error saving token:', e);
+  }
+};
+
+const loadToken = async () : Promise<string | null> => {
+  return await AsyncStorage.getItem('authToken');
+};
+&&&
+
+---
+
+## 🚫 Common Mistakes
+
+- Forgetting to handle `Promise` rejections with `try/catch` or `.catch()`
+- Using `async/await` in top-level components without `useEffect`
+- Not returning a `Promise` in async utility functions
+- Not typing the return value of async functions in TypeScript
+
+---
+
+## ✅ Final Tips
+
+- Use `async/await` for readability, but prefer `Promise.all()` for parallel execution.
+- Wrap all async calls in `try/catch`.
+- Write utility functions for repeatable async flows (e.g., fetch helpers).
+- Rely on **TypeScript** to validate inputs, outputs, and error states.
+
+---
+
+## Conclusion
+
+Mastering **async patterns** in JavaScript and TypeScript is essential for building robust React Native apps. Whether you're loading data, requesting permissions, or interacting with native APIs, async handling is everywhere. With clear typing, proper error handling, and modern JavaScript features, you can write clean, maintainable, and reliable async logic.
