article for react native

--- a/reactNative/rn/014_01.md
+++ b/reactNative/rn/014_01.md
@@ -158,6 +158,140 @@ type UserKeys = keyof User; // 'id' | 'name'
 
 ---
 
+### 13. How would you restrict a generic type to only accept specific keys of a given object?
+
+**Expected Answer**:
+
+You can constrain a generic type using `extends keyof`.
+
+```js
+type User = {
+  id: number;
+  name: string;
+  email: string;
+};
+
+function getValue<T extends keyof User>(user: User, key: T): User[T] {
+  return user[key];
+}
+
+const email = getValue({ id: 1, name: 'John', email: 'john@example.com' }, 'email');
+```
+
+This ensures only `'id' | 'name' | 'email'` can be passed as `key`.
+
+---
+
+### 14. How would you write a reusable `Select` component with generic item types in React Native?
+
+**Expected Answer**:
+
+```js
+type SelectProps<T> = {
+  items: T[];
+  getLabel: (item: T) => string;
+  onSelect: (item: T) => void;
+};
+
+function Select<T>({ items, getLabel, onSelect } : SelectProps<T>) : JSX.Element {
+  return (
+    <View>
+      {items.map((item, index) => (
+        <TouchableOpacity key={index} onPress={() => onSelect(item)}>
+          <Text>{getLabel(item)}</Text>
+        </TouchableOpacity>
+      ))}
+    </View>
+  );
+}
+```
+
+This pattern is extremely useful for rendering generic dropdowns, lists, or pickers.
+
+---
+
+### 15. Explain what `Partial<T>`, `Required<T>`, `Readonly<T>`, and `Pick<T, K>` do. Provide an example for `Partial`.
+
+**Expected Answer**:
+
+- `Partial<T>`: makes all properties in `T` optional  
+- `Required<T>`: makes all properties in `T` required  
+- `Readonly<T>`: prevents reassignment of `T` properties  
+- `Pick<T, K>`: selects a subset of properties from `T`
+
+Example:
+
+```js
+interface User {
+  id: number;
+  name: string;
+  email: string;
+}
+
+const updateUser = (update: Partial<User>) => {
+  // allows updating just part of the user
+};
+```
+
+---
+
+### 16. What is the difference between `<T extends unknown>` and `<T extends any>` in generic declarations?
+
+**Expected Answer**:
+
+- `T extends any`: allows all types including `any`, disabling some type-safety
+- `T extends unknown`: enforces stricter checks, disallows implicit `any` usage
+
+Using `unknown` is safer when you want to enforce proper type inference without leaking `any`.
+
+---
+
+### 17. How would you infer a return type of a function using generics?
+
+**Expected Answer**:
+
+Use the `ReturnType<T>` utility.
+
+```js
+const getUser = () => {
+  return { id: 1, name: 'Jane' };
+};
+
+type User = ReturnType<typeof getUser>; // { id: number; name: string }
+```
+
+---
+
+### 18. How can generics help you enforce consistent API request/response types?
+
+**Expected Answer**:
+
+You can create a reusable API wrapper with type parameters for `input` and `output`:
+
+```js
+async function fetchApi<TRequest, TResponse>(
+  endpoint: string,
+  data: TRequest
+): Promise<TResponse> {
+  const res = await fetch(endpoint, {
+    method: 'POST',
+    body: JSON.stringify(data),
+  });
+
+  return await res.json();
+}
+
+type LoginRequest = { email: string; password: string };
+type LoginResponse = { token: string };
+
+const login = () => fetchApi<LoginRequest, LoginResponse>('/login', {
+  email: 'test@example.com',
+  password: '123456',
+});
+```
+
+---
+
 ## Conclusion
 
-These questions cover fundamental TypeScript knowledge for React Native developers. A solid grasp of interfaces, generics, type guards, and advanced utilities like module augmentation is crucial for writing scalable and safe TypeScript code.
+These advanced TypeScript questions highlight real-world generic use cases for reusable components, hooks, and data handling in React Native. A strong grasp of generics allows developers to write **flexible**, **type-safe**, and **scalable** code across their mobile applications.
