article for react native

--- a/reactNative/rn/008_01.md
+++ b/reactNative/rn/008_01.md
@@ -1,145 +1,107 @@
-# React Native Interview Questions: Event Loop, Concurrency, Microtasks vs Macrotasks, and JS Thread Blocking
+# Interview Questions: JavaScript Execution Order, Event Loop, and Task Queues
 
-These interview questions evaluate a candidate’s understanding of JavaScript’s concurrency model, how the **event loop** works, and how **React Native's JS thread** interacts with UI rendering. They also cover distinctions between **microtasks** and **macrotasks**, and how to avoid **blocking the UI thread**.
-
----
-
-## 🔁 Event Loop Basics
-
-### 1. What is the event loop in JavaScript and why is it important in React Native?
-
-**Expected Answer**: The event loop manages the execution of asynchronous code in JavaScript. In React Native, it helps coordinate the execution of tasks between the JS thread and the UI thread, ensuring smooth rendering and user interaction.
+This section focuses on understanding how JavaScript schedules and executes different types of tasks using the event loop, particularly the concepts of synchronous execution, microtasks, macrotasks, and ticks.
 
 ---
 
-### 2. How many threads does React Native use and what are their responsibilities?
+## Question 1: What is the execution order of tasks in JavaScript?
 
-**Expected Answer**:
+**Answer:**  
+JavaScript executes code in the following order:
 
-| Thread        | Responsibility                                |
-|---------------|-----------------------------------------------|
-| JS Thread     | Runs JavaScript code (logic, rendering, etc.) |
-| UI Thread     | Manages layout, animations, rendering          |
-| Native Modules| Handles background tasks (networking, storage) |
-
----
-
-## ⏱ Microtasks vs Macrotasks
-
-### 3. What is the difference between a microtask and a macrotask?
-
-**Expected Answer**:  
-- Microtasks (e.g., `Promise.then`, `queueMicrotask`) are executed immediately after the current execution stack and before any macrotask.  
-- Macrotasks (e.g., `setTimeout`, `setImmediate`) are deferred to the next tick of the event loop after microtasks have cleared.
+1. **Synchronous code** — runs immediately, top to bottom.
+2. **Microtasks** — run after synchronous code finishes, but before moving to the next tick.
+3. **Macrotasks** — run after all microtasks are finished, starting in the next event loop tick.
 
 ---
 
-### 4. Predict the output of the following code:
+## Question 2: What is a "tick" in the JavaScript event loop?
 
-```js
-console.log('A');
+**Answer:**  
+A **tick** is a single cycle of the JavaScript event loop. Each tick includes:
 
-setTimeout(() => {
-  console.log('B');
-}, 0);
+- Running the current synchronous code
+- Running all queued microtasks (like `Promise.then()`)
+- Then starting the next tick with a macrotask (like `setTimeout()`)
+
+---
+
+## Question 3: What is the difference between microtasks and macrotasks?
+
+**Answer:**
+
+| Feature         | Microtask                                 | Macrotask                          |
+|----------------|--------------------------------------------|------------------------------------|
+| Runs after      | Synchronous execution                      | Microtasks                         |
+| Runs within     | Same tick                                  | Next tick                          |
+| Examples        | `Promise.then()`, `queueMicrotask()`       | `setTimeout()`, `setImmediate()`   |
+| Use case        | High-priority follow-up logic              | Deferred or scheduled operations   |
+
+---
+
+## Question 4: Can you show an example of microtask vs. macrotask?
+
+**Answer:**
+
+```tsx
+console.log('1');
 
 Promise.resolve().then(() => {
-  console.log('C');
+  console.log('2 (microtask)');
 });
 
-console.log('D');
+setTimeout(() => {
+  console.log('3 (macrotask)');
+}, 0);
+
+console.log('4');
 ```
 
-**Expected Answer**:
-A  
-D  
-C  
-B
+**Output:**
+
+1
+4
+2 (microtask)
+3 (macrotask)
+
+Explanation:
+- '1' and '4' are synchronous and run first.
+- '2' is a microtask, runs after the sync code in the same tick.
+- '3' is a macrotask, runs in the next tick.
 
 ---
 
-## 🛑 Blocking the JS Thread
+## Question 5: Why are microtasks prioritized over macrotasks?
 
-### 5. What happens if you block the JS thread in React Native?
-
-**Expected Answer**: The UI becomes unresponsive. Animations, navigation, gestures, and re-renders will not work until the blocking code finishes.
-
----
-
-### 6. Identify the issue in this code and explain its impact:
-
-```js
-const heavyTask = () : void => {
-  const start = Date.now();
-  while (Date.now() - start < 3000) {
-    // Busy-wait loop
-  }
-  console.log('Done');
-};
-```
-
-**Expected Answer**: This synchronous loop blocks the JS thread for 3 seconds, freezing the UI and preventing any user interaction.
+**Answer:**  
+Microtasks represent high-priority follow-ups to what just happened in the synchronous phase — e.g., a `.then()` after a resolved `Promise`. They are intended to be quick and essential operations, so the event loop finishes them before allowing new macrotasks to run.
 
 ---
 
-### 7. How can you refactor the code above to avoid blocking the UI thread?
+## Question 6: What happens if a microtask queues another microtask?
 
-**Expected Answer**:
+**Answer:**  
+The newly added microtask is placed at the end of the current microtask queue and will still run within the same tick — before the event loop moves to the next macrotask.
 
-```js
-const runInChunks = (items: number[]) : void => {
-  const chunkSize = 100;
-
-  const process = (start: number) : void => {
-    const end = Math.min(start + chunkSize, items.length);
-    for (let i = start; i < end; i++) {
-      // Process item
-    }
-
-    if (end < items.length) {
-      setTimeout(() => process(end), 0);
-    }
-  };
-
-  process(0);
-};
-```
+This means microtasks can continue queuing other microtasks and delay the start of the next tick, potentially causing performance issues if not controlled.
 
 ---
 
-## 🔍 Advanced Concurrency
+## Question 7: How does this apply to React Native?
 
-### 8. When would you use `Promise.all` vs `Promise.allSettled` in a React Native app?
+**Answer:**  
+React Native uses a JavaScript engine (Hermes or JSC) that runs JavaScript with the same event loop behavior:
 
-**Expected Answer**:  
-- `Promise.all` is used when all promises must succeed, and it rejects as soon as one fails.  
-- `Promise.allSettled` waits for all promises to finish and returns both resolved and rejected results, useful when you don’t want one failure to stop the rest.
-
----
-
-### 9. Why should long-running calculations not be run directly on the JS thread in React Native?
-
-**Expected Answer**: Because it will block the event loop, preventing UI updates and degrading user experience. Heavy tasks should be split into smaller chunks or offloaded to native modules or worker threads.
+- `setTimeout`, `setImmediate`, and `requestAnimationFrame` are macrotasks.
+- `Promise.then()` and `async/await` use microtasks.
+- Native module calls (like fetching data or accessing the camera) are executed on the native thread and communicate back via task queues.
+- The Metro bundler compiles your code into a single JavaScript bundle where this task execution model is preserved.
 
 ---
 
-### 10. How can you debug JS thread blocking in a React Native application?
+## Summary
 
-**Expected Answer**:
-- Use Flipper’s performance tools to inspect JS frame durations  
-- Monitor slow UI interactions or delayed gesture responses  
-- Use the Hermes profiler or Chrome DevTools for long task detection
-
----
-
-## ✅ Bonus
-
-### 11. What's the preferred way to handle an expensive task without freezing the UI?
-
-**Expected Answer**: Use background threads (e.g., `react-native-threads`), break tasks into asynchronous chunks with `setTimeout`, or offload to native modules.
-
----
-
-## Conclusion
-
-A solid understanding of the **event loop**, **microtask vs macrotask prioritization**, and **JS thread behavior** is vital for building responsive React Native applications. These questions help ensure candidates can write non-blocking, performant code and handle concurrency like a pro.
+- JavaScript task scheduling follows this order: sync code → microtasks → macrotasks.
+- A **tick** represents one pass through sync + microtask queues.
+- Microtasks are always executed before moving on to any macrotask in the next tick.
+- Understanding the event loop and task prioritization is essential to writing non-blocking, responsive code, especially in mobile environments like React Native.
